(executable
 (name main)
 (libraries yojson jsch react brr ppx_deriving types)
 (modes js)
 (link_flags (:standard -no-check-prims))
 (preprocess (pps js_of_ocaml-ppx ppx_deriving.eq ppx_deriving.show ppx_deriving_yojson)))

(rule
 (targets main.js)
 (deps main.bc.js)
 (action (run cp %{deps} %{targets})))

(alias
 (name app)
 (deps main.js index.html))
